# mozilla-pipeline-schemas

./: .dockerignore  .gitignore  .travis.yml  CMakeLists.txt  CODEOWNERS  Dockerfile  GRAVEYARD.md  Makefile  README.md  README.pioneer.md  README.shield.md  pom.xml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  setup.py
.circleci/: config.yml  post-artifact.js
.github/: auto_assign.yml  pull_request_template.md  push-to-integration-branch  push-to-trigger-integration
.github/workflows/: ci.yml  deploy-artifacts.yml  deploy-schemas.yml
bq/activity_stream/: events_v1.bq  events_v1.schema.json  impression_stats_v1.bq  impression_stats_v1.schema.json  on_save_recs_v1.bq  on_save_recs_v1.schema.json  pocket_button_v1.bq  pocket_button_v1.schema.json  sessions_v1.bq  sessions_v1.schema.json  spoc_fills_v1.bq  spoc_fills_v1.schema.json
bq/burnham/: baseline_v1.bq  baseline_v1.schema.json  deletion_request_v1.schema.json  discovery_v1.schema.json  events_v1.schema.json  metrics_v1.schema.json  space_ship_ready_v1.schema.json  starbase46_v1.schema.json
bq/contextual_services/: quicksuggest_click_v1.bq  quicksuggest_click_v1.schema.json  quicksuggest_impression_v1.bq  quicksuggest_impression_v1.schema.json  topsites_click_v1.schema.json  topsites_impression_v1.schema.json
bq/coverage/: coverage_v1.schema.json
bq/default_browser_agent/: default_browser_v1.schema.json
bq/edge_validator/: error_report_v1.schema.json
bq/eng_workflow/: bmobugs_v1.bq  bmobugs_v1.schema.json  build_v1.schema.json  hgpush_v1.bq  hgpush_v1.schema.json
bq/firefox_accounts/: activity_flow_metrics_v1.schema.json  amplitude_event_v1.schema.json
bq/firefox_desktop/: baseline_v1.schema.json  deletion_request_v1.bq  deletion_request_v1.schema.json  events_v1.schema.json  fog_validation_v1.schema.json  metrics_v1.schema.json
bq/firefox_installer/: install_v1.bq  install_v1.schema.json
bq/firefox_launcher_process/: launcher_process_failure_v1.bq  launcher_process_failure_v1.schema.json
bq/messaging_system/: cfr_v1.schema.json  infobar_v1.bq  infobar_v1.schema.json  moments_v1.schema.json  onboarding_v1.bq  onboarding_v1.schema.json  personalization_experiment_v1.schema.json  snippets_v1.bq  snippets_v1.schema.json  undesired_events_v1.schema.json  whats_new_panel_v1.bq  whats_new_panel_v1.schema.json
bq/mobile/: activation_v1.schema.json
bq/mozdata/: event_v1.schema.json
bq/mozilla_lockbox/: baseline_v1.schema.json  bookmarks_sync_v1.schema.json  deletion_request_v1.schema.json  events_v1.schema.json  history_sync_v1.schema.json  logins_sync_v1.schema.json  metrics_v1.schema.json  sync_v1.schema.json
bq/mozilla_mach/: baseline_v1.schema.json  deletion_request_v1.schema.json  events_v1.schema.json  metrics_v1.schema.json  usage_v1.bq  usage_v1.schema.json
bq/mozphab/: baseline_v1.schema.json  deletion_request_v1.schema.json  events_v1.schema.json  metrics_v1.schema.json  usage_v1.bq  usage_v1.schema.json
bq/mozza/: event_v1.bq  event_v1.schema.json
bq/org_mozilla_bergamot/: custom_v1.bq  custom_v1.schema.json  deletion_request_v1.schema.json
bq/org_mozilla_connect_firefox/: baseline_v1.schema.json  deletion_request_v1.bq  deletion_request_v1.schema.json  events_v1.schema.json  metrics_v1.schema.json
bq/org_mozilla_fenix/: activation_v1.bq  activation_v1.schema.json  baseline_v1.schema.json  bookmarks_sync_v1.schema.json  deletion_request_v1.schema.json  events_v1.schema.json  first_session_v1.schema.json  history_sync_v1.schema.json  installation_v1.schema.json  logins_sync_v1.schema.json  metrics_v1.schema.json  migration_v1.schema.json  startup_timeline_v1.schema.json  sync_v1.bq  sync_v1.schema.json
bq/org_mozilla_fenix_nightly/: activation_v1.schema.json  baseline_v1.schema.json  bookmarks_sync_v1.schema.json  deletion_request_v1.schema.json  events_v1.schema.json  first_session_v1.schema.json  history_sync_v1.schema.json  installation_v1.bq  installation_v1.schema.json  logins_sync_v1.schema.json  metrics_v1.schema.json  migration_v1.schema.json  startup_timeline_v1.schema.json  sync_v1.schema.json
bq/org_mozilla_fennec_aurora/: activation_v1.schema.json  baseline_v1.schema.json  bookmarks_sync_v1.schema.json  deletion_request_v1.schema.json  events_v1.schema.json  first_session_v1.schema.json  history_sync_v1.schema.json  installation_v1.schema.json  (+5 more)
jar/: Makefile  README.md  pom.xml
m4/: base.m4  definitions.m4  environment.m4
metadata/: metadata_credentials.schema.json  metadata_sources.schema.json
mozilla_pipeline_schemas/: bigquery.py  sink.py  utils.py
parquet/: shield-study-addon.parquetmr.txt  shield-study-error.parquetmr.txt  shield-study.parquetmr.txt
schemas/: environment-main.schema  main.schema
scripts/: assert-consistent-schemas  assert-telemetry-version  bigquery.py  bigquery_schema_diff.py  download-java-dependencies  extract_crash_annotation_fields  extract_glean_client_info_descriptions  extract_probe_dictionary_descriptions  inject-metadata  mps-build  mps-shell  mps-test  render-integration-report  test-pytest-generation  transform-schema
shield-study/: shield-study-addon.schema.json  shield-study-error.schema.json  shield-study.schema.json
telemetry/: anonymous.parquetmr.txt  anonymous.schema.json  application-main.schema  core.parquetmr.txt  core.schema.json  crash.schema.json  environment-main.schema  focus-event.schema.json  main-v1.schema.json  main.schema.json  modules.schema.json  shield-study-addon.parquetmr.txt  shield-study-addon.schema.json  shield-study-error.parquetmr.txt  shield-study-error.schema.json  shield-study.parquetmr.txt  shield-study.schema.json  vacuous.schema.json
tests/: conftest.py  test_duplicate_schemas.py  test_metadata_defaults.py  test_mps_bigquery.py  test_mps_cli_bigquery.py  test_mps_sink.py  test_mps_utils.py  test_pipeline_metadata.py  test_schema_format.py  test_schema_structure.py  test_telemetry_version.py  test_utils.py  test_validation.py  test_validation_java.py  test_validation_python.py  utils.py
validation/: main-ping-validation-with-jsonschema.ipynb
(+3790 files in other folders)
